--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -10,7 +10,8 @@
     <br>
     <button id="login-btn">Log In</button>
     <p id="middleOR">OR</p>
-    <h3 id="loginwithfacebook">Log in with Facebook</h3>
+
+    <h3 id="loginwithfacebook">    <i class="fa-brands fa-facebook-square"></i> Log in with Facebook</h3>
     <span id="forgotpassword">Forgot password?</span>
 </div>
 
