--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 
 .signin-box {
   border: 1px solid #dfdfde;
-  width: 450px;
+  width: 400px;
   text-align: center;
   background-color: white;
   margin-top: 70px;
@@ -14,18 +14,21 @@
 }
 #second-box{
     border: 1px solid #dfdfde;
-  width: 450px;
+  width: 400px;
   text-align: center;
   background-color: white;
   margin-top: 7px;
   height: 70px;
   padding-top: 30px;
+  font-weight: 100;
+  font-size:medium
 }
 #login-title {
   margin-top: 50px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   width: 200px;
   background-color: white;
+  padding: 10px;
 }
 .userbox {
   background-color: #f7f7f7;
@@ -53,7 +56,7 @@
   margin-bottom: 20px;
   overflow: hidden;
   text-align: center;
-  color: #aaaaaa;
+  color: #7F8487;
   background-color: white;
   width: 299px;
 }
@@ -104,12 +107,14 @@ a{
           background-color: white;
 
 }
+/* signin styling */
 .homenavbar{
     display: flex;
 position: fixed;
   top: 0;
   width: 100%;
-  border: 1px solid #b2b1b9;
+  border: 2px solid #ECECEC;
+  height: 60px;
   /* overflow: hidden; */
   /* background-color: #333; */
 }
@@ -125,7 +130,38 @@ position: fixed;
     margin-top: 15px;
     width: 110px;
     margin-left: 12px;
+    padding: 6px;
+    margin-bottom: 5px;
 }
 .home-posts{
+    max-width: 500px;
     margin-top: 60px;
+    text-align: center;
+    border: 1px solid #ECECEC;
+}
+#searchbar-home{
+    background-color: #ECECEC;
+    width: 270px;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
+    padding-left: 20px;
+    
+}
+.imagenav-home{
+    float: left;
+}
+
+#bookmark-home{
+    margin-left: 420px;
+}
+#username-home{
+    float: left;
+}
+.leftcontent-home{
+    text-align: left;
+}
+.fa-ellipsis{
+    float: right;
 }
