--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,7 +120,11 @@ position: fixed;
 }
 .rightside{
     float: right;
-    padding-top: 30px;
+    font-size: 25px;    
+    margin-top: 10px;
+}
+.space{
+    padding-right: 30px;
 }
 
 .caption{
@@ -138,6 +142,7 @@ position: fixed;
     margin-top: 60px;
     text-align: center;
     border: 1px solid #ECECEC;
+    background-color: white;
 }
 #searchbar-home{
     background-color: #ECECEC;
@@ -148,9 +153,11 @@ position: fixed;
     margin-top: 10px;
     padding-left: 20px;
     
+    
 }
 .imagenav-home{
     float: left;
+    
 }
 
 #bookmark-home{
@@ -164,4 +171,10 @@ position: fixed;
 }
 .fa-ellipsis{
     float: right;
+}
+#userimage-home{
+    border-radius: 50%;
+    max-width: 50px;
+    max-height: 50px;
+    clip-path: circle();
 }
