--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -8,7 +8,10 @@
     <br>
     <input type="password" name="" class="userbox" placeholder="Password">
     <br>
-    <button id="login-btn">Log In</button>
+    <a href="/posts/home">
+ <button id="login-btn">Log In</button>
+    </a>
+   
     <p id="middleOR">OR</p>
 
     <h3 id="loginwithfacebook">    <i class="fa-brands fa-facebook-square"></i> Log in with Facebook</h3>
