--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="/css/style.css">
 
     <title>Instagram Clone</title>
+    <script>
+    document.querySelector('.liked-h').classList.toggle("liked-class")
+</script>
 </head>
 <body>
     
