--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,80 +1,101 @@
-<%- include('header') -%>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e7fbf5096b.js" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="/css/style.css">
+
+    <title>Document</title>
+    
+</head>
+<body>
+    
+
 
 <nav class="homenavbar">
-   <img src="https://www.instagram.com/static/images/web/logged_out_wordmark.png/7a252de00b20.png"  id="home-title" alt="">
-<input type="search" placeholder="Search" results="0" id="searchbar-home" />
-<div class="rightside">
-<i class="fa-solid fa-house space" ></i>
-<i class="fa-regular fa-paper-plane space"></i>
-<a href="/posts/newpost">
-<i class="fa-regular fa-square-plus space"></i>
-</a>
+  <img
+    src="https://www.instagram.com/static/images/web/logged_out_wordmark.png/7a252de00b20.png"
+    id="home-title"
+    alt=""
+  />
+  <input type="search" placeholder="Search" results="0" id="searchbar-home" />
+  <div class="rightside">
+    <i class="fa-solid fa-house space"></i>
+    <i class="fa-regular fa-paper-plane space"></i>
+    <a href="/posts/newpost">
+      <i class="fa-regular fa-square-plus space"></i>
+    </a>
 
-<i class="fa-regular fa-compass space"></i>
-<i class="fa-regular fa-heart"></i>
-
-
-</div>
-
+    <i class="fa-regular fa-compass space"></i>
+    <i class="fa-regular fa-heart"></i>
+  </div>
 </nav>
 
 <div class="stories-home">
-    <h3>stories here</h3>
-
+  <h3>stories here</h3>
 </div>
 
-
-
-
-<% for (let i = posts.length - 1; i >= 0; i--) { %> 
+<% for (let i = posts.length - 1; i >= 0; i--) { %>
 <div class="home-posts">
+  <img src="<%=posts[i].userimage%>" id="userimage-home" alt="" /><span
+    class="user-home"
+    id="username-home"
+  >
+    <%=posts[i].user%></span
+  >
 
-    <img src="<%=posts[i].userimage%>" id="userimage-home" alt=""><span class="user-home" id="username-home"> <%=posts[i].user%></span>
-    <i class="fa-solid fa-ellipsis"></i>
-    <br>
-    <img src="<%=posts[i].img%> " alt="" class="home-images">
-    <br>
-    <nav class="imagenav-home">
+  <details>
+    <summary><i class="fa-solid fa-ellipsis"></i></summary>
+    <p>Edit</p>
+    <details>
+        <summary id="sure-home">Delete</summary>
+        <p>no</p>
+        <form action="/posts/<%=posts[i]._id; %>?_method=DELETE" method="POST">
+    <input type="submit" value="Yes" id="delete-btn"/>
+</form>
+    </details>
+    
+  </details>
+  <br />
+  <img src="<%=posts[i].img%> " alt="" class="home-images" />
+  <br />
+  <nav class="imagenav-home">
+    <form action="/posts/<%=posts[i]._id%>/like" method="POST">
+      <button type="submit" class="like-btn">
+        <i class="fa-regular fa-heart liked-h" id="heartbtn" onclick="myFunction()"></i>
+      </button>
+    </form>
 
-        <form action="/posts/<%=posts[i]._id%>/like" method="POST" >
-           
-
-       <button type="submit" class="like-btn">
-  <i class="fa-regular fa-heart" ></i>
-</button>
-
-  
-
-</form>    
-
-
-
-  <i class="fa-regular fa-comment"></i>
-  <i class="fa-regular fa-paper-plane"></i>
-  <span id="bookmark-home">
+    <i class="fa-regular fa-comment"></i>
+    <i class="fa-regular fa-paper-plane"></i>
+    <span id="bookmark-home">
       <i class="fa-regular fa-bookmark"></i>
-  </span>
+    </span>
+  </nav>
 
-    </nav>
-  
-<br>
-<div class="leftcontent-home">
-<h4 class="white-bg"><%=posts[i].likes%> likes</h4>
-    
+  <br />
+  <div class="leftcontent-home">
+    <h4 class="white-bg"><%=posts[i].likes%> likes</h4>
+
     <p class="caption white-bg">
-        <span class="user-home"><%=posts[i].user%> </span>
-<%=posts[i].caption%> 
-
+      <span class="user-home"><%=posts[i].user%> </span>
+      <%=posts[i].caption%>
     </p>
+  </div>
+  <div></div>
 </div>
-<div>
+
+
+
+
+ <script>
+     let heart = document.getElementById('heartbtn')
+     function myFunction(){
+    heart.classList.add("liked-class")
+     }
     
-    
-</div>
-    </div>
-<%}%>
-
-
-
-
-<%- include('footer') -%>
+</script>
+<%}%> <%- include('footer') -%>
