--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,6 +203,7 @@ text-align: left;
 }
 .user-home{
     font-weight: 900;
+    background-color: white;
 }
 
 a:visited{
@@ -267,4 +268,13 @@ details > p {
 }
 .fa-user{
   margin-left: 20px;
+}
+a {
+  color: black;
+}
+
+@media only screen and (max-width: 600px) {
+  #searchbar-home{
+    display: none;
+  }
 }
