--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,44 +14,14 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="homenavbar">
-    
-      <img
-        src="https://www.instagram.com/static/images/web/logged_out_wordmark.png/7a252de00b20.png"
-        id="home-title"
-        alt=""
-      />
-      <input
-        type="search"
-        placeholder="Search"
-        results="0"
-        id="searchbar-home"
-      />
-      <div class="rightside">
-        <a href="/posts/home"> <i class="fa-solid fa-house space"></i></a>
-       
-        <i class="fa-regular fa-paper-plane space"></i>
-        <a href="/posts/newpost">
-          <i class="fa-regular fa-square-plus space"></i>
-        </a>
 
-        <i class="fa-regular fa-compass space"></i>
-        <i class="fa-regular fa-heart"></i>
-        <a href=""><i class="fa-solid fa-user"></i></a>
-        
 
-      </div>
-      <form action="/sessions?_method=DELETE" method="POST" >
-			<input type="submit" value="Log Out" class="logout-btn" />
-		</form>
-    </nav>
+<%- include('navbar') -%>
 
    
 
     <% for (let i = posts.length - 1; i >= 0; i--) { %>
     <div class="home-posts">
-        <%=user.username%>
-
       <img src="<%=posts[i].userimage%>" id="userimage-home" alt="" /><span
         class="user-home"
         id="username-home"
