--- a/views/postnew.ejs
+++ b/views/postnew.ejs
@@ -4,7 +4,7 @@
 		<h1>Create new post</h1>
 		<form action="/posts/" method="POST">
             <!-- <input type="file" name="img" id=""> -->
-            <input type="text" name="user" placeholder="username">
+			<input type="text" name="user" value="<%=user.username%>" readonly>
             <input type="text" name="userimage" placeholder="userimage" id="">
             <input type="text" name="img" placeholder="img url" />
 			<input type="text" name="caption" placeholder="add a caption"/><br />
