--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -22,7 +22,7 @@
         <i class="fa-regular fa-compass space"></i>
         <i class="fa-regular fa-heart"></i>
         <a href="/posts/profile"><i class="fa-solid fa-user"></i></a>
-        
+        <!-- change link to id  -->
 
       </div>
       <form action="/sessions?_method=DELETE" method="POST" >
