users edit and delete own posts

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -23,7 +23,7 @@
         <i class="fa-regular fa-heart"></i>
         <a href="/posts/profile"><i class="fa-solid fa-user"></i></a>
         <!-- change link to id  -->
-
+ @<%=user.username%>
       </div>
       <form action="/sessions?_method=DELETE" method="POST" >
 			<input type="submit" value="Log Out" class="logout-btn" />
