--- a/views/postnew.ejs
+++ b/views/postnew.ejs
@@ -5,7 +5,7 @@
 		<form action="/posts/" method="POST">
             <!-- <input type="file" name="img" id=""> -->
 			<input type="text" name="user" value="<%=user.username%>" readonly>
-            <input type="text" name="userimage" value="<%=user.profileimage%>" readonly>
+            <input type="text" name="profileimage" value="<%=user.profileimage%>" >
             <input type="text" name="img" placeholder="img url" />
 			<input type="text" name="caption" placeholder="add a caption"/><br />
 			<input type="submit" value="Share" />
