--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,15 +11,19 @@
 <h1> Hello! <b><%=user.username%> </b> </h1>
 <a href="/posts/<%=user._id%>editprofile"><button>Edit profile</button></a>
 <p>You have <%=user.posts.length%> posts</p>
-<p><%=user.fullname%> uhh</p>
+<p><%=user.fullname%></p>
 
 <hr>
 <h2>posts</h2>
 <div class="cards">
+    
 <% for (let i = 0; i < user.posts.length; i++){%>
+
 
     <div class="cards__item">
         <img src="<%=user.posts[i].img%>" alt="" id="profileimages">
+
+
       
     </div>
 
