--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,11 +263,7 @@ a {
   color: black;
 }
 
-@media only screen and (max-width: 600px) {
-  #searchbar-home {
-    display: none;
-  }
-}
+
 
 /* cards div */
 .cards {
@@ -297,4 +293,14 @@ max-height: 300px;
 #profileimage{
   clip-path: circle();
   max-width: 300px;
+}
+.profile-hr{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+@media only screen and (max-width: 800px) {
+  #searchbar-home {
+    display: none;
+  }
 }
