--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,6 +122,10 @@ a {
   float: right;
   font-size: 25px;
   margin-top: 10px;
+  /* margin-left: 100px; */
+  position: absolute;
+  right: 0;
+
 }
 .space {
   padding-right: 30px;
@@ -147,13 +151,21 @@ a {
 }
 #searchbar-home {
   background-color: #ececec;
-  width: 270px;
+  max-width: 350px;
+  min-width: 270px;
   height: 40px;
   border: none;
   border-radius: 5px;
   margin-top: 10px;
   padding-left: 20px;
+  margin-right: 10px;
+  padding-right: 10px;
+  position: absolute;
+  right: 580px;
 }
+/* .nav-right{
+
+} */
 .imagenav-home {
   background-color: white;
   text-align: left;
@@ -269,7 +281,6 @@ a {
 .cards {
   display: flex;
 
-  /* Put a card in the next row when previous cards take all width */
   flex-wrap: wrap;
 
   margin-left: -8px;
@@ -290,17 +301,69 @@ a {
 width: 300px;
 max-height: 300px;
 }
-#profileimage{
-  clip-path: circle();
-  max-width: 300px;
-}
+
 .profile-hr{
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 40px;
+}
+
+.profile-header{
+  margin: 0 auto;
+  display: grid;
+   grid-template-columns: 200px 100px;
+    grid-template-rows: 100px 50px 50px;
+    grid-template-areas:
+    "i h" 
+    "i e"
+    "i b ";
+  /* justify-content:end */
+}
+#profileimage{
+  clip-path: circle();
+  max-width: 200px;
+  /* margin-left: 0px; */
+  grid-area: i;
+}
+#username-greeting{
+  /* margin-left: -100px; */
+  grid-area: h;
+  
+}
+#editprofilebutton{
+  grid-area: e;
+ 
+}
+#fullnameprofile{
+  grid-area: b;
 }
 
 @media only screen and (max-width: 800px) {
-  #searchbar-home {
+  .navbarusername{
+display: none;
+  }
+  /* .fa-paper-plane{
     display: none;
   }
+  .fa-heart {
+     display: none;
+  }
+  .fa-compass{
+     display: none;
+  }
+  .space{
+    padding: 5px;
+  } */
+}
+
+#logoutprofile{
+  float: right;
+  position: absolute;
+  right: 14px;
+}
+
+@media only screen and (max-width: 1000px) {
+#searchbar-home{
+
+  display: none;
+}
 }
