--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,7 +28,7 @@
      
      
     <div class="cards__item">
-        <a href=""><img src="<%=posts[i].img%>" alt="" id="profileimages"></a>
+        <a href="/posts/showpost/<%=posts[i]._id%>"><img src="<%=posts[i].img%>" alt="" id="profileimages"></a>
         <!--need to make this less long later on  -->
 
     </div>
