--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -31,7 +31,7 @@
 
   
     <div class="home-posts">
-      <img src="<%=post.userimage%>" id="userimage-home" alt="" /><span
+      <img src="<%=post.profileimage%>" id="userimage-home" alt="" /><span
         class="user-home"
         id="username-home"
       >
