--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
 
     <% for (let i = posts.length - 1; i >= 0; i--) { %>
     <div class="home-posts">
-      <% if(user.username == posts[i].user || user.username == "nuts"){ %>
+      <% if(user.username == posts[i].user){ %>
         <img src="<%=user.profileimage%>" id="userimage-home" alt="" />
          <details>
         <summary><i class="fa-solid fa-ellipsis"></i></summary>
