--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -30,7 +30,7 @@
       </div>
     
    
-      <!-- <form action="/sessions?_method=DELETE" method="POST" >
+      <form action="/sessions?_method=DELETE" method="POST" >
 			<input type="submit" value="Log Out" class="logout-btn" />
-		</form> -->
+		</form>
     </nav>
