--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,16 +56,16 @@
         <form action="/posts/<%=posts[i]._id%>/like" method="POST">
           <button type="submit" class="like-btn">
             <i
-              class="fa-regular fa-heart liked-h"
+              class="fa-regular fa-heart liked-h white-bg"
               id="heartbtn"
             ></i>
           </button>
         </form>
 
-        <i class="fa-regular fa-comment"></i>
-        <i class="fa-regular fa-paper-plane"></i>
+        <i class="fa-regular fa-comment white-bg"></i>
+        <i class="fa-regular fa-paper-plane white-bg"></i>
         <span id="bookmark-home">
-          <i class="fa-regular fa-bookmark"></i>
+          <i class="fa-regular fa-bookmark white-bg"></i>
         </span>
       </nav>
 
