--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -3,7 +3,7 @@
 <%- include('navbar') -%>
 
   <div class="home-posts">
-      <img src="<%=post.profileimage%>" id="userimage-home" alt="" /><span
+      <img src="<%=user.profileimage%>" id="userimage-home" alt="" /><span
         class="user-home"
         id="username-home"
       >
