--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -25,12 +25,12 @@
         <i class="fa-regular fa-heart  "></i>
         <a href="/posts/profile"><i class="fa-solid fa-user space"></i></a>
         <!-- change link to id  -->
-        <span class="navbarusername"> @<%=user.username%></span>
+        <!-- <span class="navbarusername"> @<%=user.username%></span> -->
 
       </div>
     
    
-      <form action="/sessions?_method=DELETE" method="POST" >
+      <!-- <form action="/sessions?_method=DELETE" method="POST" >
 			<input type="submit" value="Log Out" class="logout-btn" />
-		</form>
+		</form> -->
     </nav>
